# OctoPrint-RTMPStreamer

./: MANIFEST.in  README.md  Taskfile.yml  docker_instructions.md  instructions.md  pyproject.toml  requirements.txt  setup.py
octoprint_rtmpstreamer/: __init__.py
octoprint_rtmpstreamer/static/css/: rtmpstreamer.css
octoprint_rtmpstreamer/static/js/: rtmpstreamer.js
octoprint_rtmpstreamer/templates/: rtmpstreamer_settings.jinja2  rtmpstreamer_tab.jinja2
